; ModuleID = '/home/carl/AnghaBench/toxcore/toxcore/extr_Messenger.c_write_cryptpacket_id.c'
source_filename = "/home/carl/AnghaBench/toxcore/toxcore/extr_Messenger.c_write_cryptpacket_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { %struct.TYPE_5__*, i32, i32 }
%struct.TYPE_5__ = type { i64, i32 }

@MAX_CRYPTO_DATA_SIZE = common dso_local global i64 0, align 8
@FRIEND_ONLINE = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_6__*, i64, i32, i32*, i64, i32)* @write_cryptpacket_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_cryptpacket_id(%struct.TYPE_6__* %0, i64 %1, i32 %2, i32* %3, i64 %4, i32 %5) #0 {
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_6__*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32, align 4
  %14 = alloca i8*, align 8
  %15 = alloca i64, align 8
  store %struct.TYPE_6__* %0, %struct.TYPE_6__** %8, align 8
  store i64 %1, i64* %9, align 8
  store i32 %2, i32* %10, align 4
  store i32* %3, i32** %11, align 8
  store i64 %4, i64* %12, align 8
  store i32 %5, i32* %13, align 4
  %16 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %17 = load i64, i64* %9, align 8
  %18 = call i64 @friend_not_valid(%struct.TYPE_6__* %16, i64 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %6
  store i32 0, i32* %7, align 4
  br label %72

21:                                               ; preds = %6
  %22 = load i64, i64* %12, align 8
  %23 = load i64, i64* @MAX_CRYPTO_DATA_SIZE, align 8
  %24 = icmp sge i64 %22, %23
  br i1 %24, label %35, label %25

25:                                               ; preds = %21
  %26 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %27 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %26, i32 0, i32 0
  %28 = load %struct.TYPE_5__*, %struct.TYPE_5__** %27, align 8
  %29 = load i64, i64* %9, align 8
  %30 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %28, i64 %29
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %30, i32 0, i32 0
  %32 = load i64, i64* %31, align 8
  %33 = load i64, i64* @FRIEND_ONLINE, align 8
  %34 = icmp ne i64 %32, %33
  br i1 %34, label %35, label %36

35:                                               ; preds = %25, %21
  store i32 0, i32* %7, align 4
  br label %72

36:                                               ; preds = %25
  %37 = load i64, i64* %12, align 8
  %38 = add nsw i64 %37, 1
  %39 = call i8* @llvm.stacksave()
  store i8* %39, i8** %14, align 8
  %40 = alloca i32, i64 %38, align 16
  store i64 %38, i64* %15, align 8
  %41 = load i32, i32* %10, align 4
  %42 = getelementptr inbounds i32, i32* %40, i64 0
  store i32 %41, i32* %42, align 16
  %43 = load i64, i64* %12, align 8
  %44 = icmp ne i64 %43, 0
  br i1 %44, label %45, label %50

45:                                               ; preds = %36
  %46 = getelementptr inbounds i32, i32* %40, i64 1
  %47 = load i32*, i32** %11, align 8
  %48 = load i64, i64* %12, align 8
  %49 = call i32 @memcpy(i32* %46, i32* %47, i64 %48)
  br label %50

50:                                               ; preds = %45, %36
  %51 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %52 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %51, i32 0, i32 2
  %53 = load i32, i32* %52, align 4
  %54 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %55 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %54, i32 0, i32 1
  %56 = load i32, i32* %55, align 8
  %57 = load %struct.TYPE_6__*, %struct.TYPE_6__** %8, align 8
  %58 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %57, i32 0, i32 0
  %59 = load %struct.TYPE_5__*, %struct.TYPE_5__** %58, align 8
  %60 = load i64, i64* %9, align 8
  %61 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %59, i64 %60
  %62 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %61, i32 0, i32 1
  %63 = load i32, i32* %62, align 8
  %64 = call i32 @friend_connection_crypt_connection_id(i32 %56, i32 %63)
  %65 = load i64, i64* %12, align 8
  %66 = add nsw i64 %65, 1
  %67 = load i32, i32* %13, align 4
  %68 = call i32 @write_cryptpacket(i32 %53, i32 %64, i32* %40, i64 %66, i32 %67)
  %69 = icmp ne i32 %68, -1
  %70 = zext i1 %69 to i32
  store i32 %70, i32* %7, align 4
  %71 = load i8*, i8** %14, align 8
  call void @llvm.stackrestore(i8* %71)
  br label %72

72:                                               ; preds = %50, %35, %20
  %73 = load i32, i32* %7, align 4
  ret i32 %73
}

declare dso_local i64 @friend_not_valid(%struct.TYPE_6__*, i64) #1

; Function Attrs: nounwind
declare i8* @llvm.stacksave() #2

declare dso_local i32 @memcpy(i32*, i32*, i64) #1

declare dso_local i32 @write_cryptpacket(i32, i32, i32*, i64, i32) #1

declare dso_local i32 @friend_connection_crypt_connection_id(i32, i32) #1

; Function Attrs: nounwind
declare void @llvm.stackrestore(i8*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
